fixing sidebar nav spacing, addung font-UNsmoothing

--- a/sites/all/themes/sho/less/helpers.less
+++ b/sites/all/themes/sho/less/helpers.less
@@ -72,6 +72,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.font-unsmoothing {
+  -webkit-font-smoothing: auto;
+  -moz-osx-font-smoothing: auto;
+}
+
 .background-size(@string) {
   -webkit-background-size: @string;
   -moz-background-size: @string;
