--- a/sites/all/themes/sho/less/sidebar-nav.less
+++ b/sites/all/themes/sho/less/sidebar-nav.less
@@ -32,12 +32,14 @@
       margin-bottom: 15px;
       &:last-child {
         margin-bottom: 0;
+        padding-bottom: 0;
       }
     }
   }
   ul ul {
     font-weight: 400;
     .typeSet(14,16);
+    .font-unsmoothing();
     li {
       margin-bottom: 8px;
       &:first-child {
